# aks_integral

./: CMakeLists.txt  calculator.cpp  calculator.h  configuration_file.txt  main.cpp  main.h  read_config.cpp  read_config.h
python_script/: script.py
